Bug 1151102 - Add some diagnostic logging. r=snorp